# governance-engine

./: policy.yml  pyproject.toml
.github/workflows/: ci.yml
governance_engine/: cli.py  policy_loader.py  rule_engine.py
